added condition node, more abstraction

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <block type="selector_node"></block>
                 <block type="sequence_node"></block>
                 <block type="action_node"></block>
+                <block type="condition_node"></block>
             </category>
         </xml>
         <script>
