--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script src="blocks_compressed.js"></script>
         <script src="blockly_behavior_nodes.js"></script>
         <script src="msg/js/en.js"></script>
-        <div id="blocklyDiv" style="height: 480px; width: 600px;"></div>
+        <div id="blocklyDiv" style="height: 1080; width: 1920;"></div>
         <xml id="toolbox" style="display: none">
             <category name="Defaults">
                 <block type="controls_if"></block>
